--- a/project/swiftui-concepts/driving-changes-in-your-ui-with-state-and-bindings.yml
+++ b/project/swiftui-concepts/driving-changes-in-your-ui-with-state-and-bindings.yml
@@ -1,6 +1,6 @@
 - 内容: Note
   提示: ''
-  翻译: ''
+  翻译: '注释'
 - 内容: By setting the isFavorite and collections properties, the new recipe automatically
     appears in the appropriate list of recipes after saving the recipe.
   提示: ''
@@ -12,7 +12,7 @@
 - 内容: To experiment with the code, download the project files and open the sample
     in Xcode.
   提示: ''
-  翻译: ''
+  翻译: '如果要亲自尝试代码，请下载项目文件，并在Xcode中打开案例。'
 - 内容: The recipeEditorConfig declaration includes the attribute for the State property
     wrapper, which tells SwiftUI to create and manage the instance of RecipeEditorConfig.
     Each time view state changes, that is, data that recipeEditorConfig contains changes,
@@ -25,11 +25,11 @@
     hierarchy. Each view has a dependency on some data. As that data changes, either
     due to external events or because of actions taken by a person using the app,
     SwiftUI automatically updates the view to reflect those changes.
-  提示: ''
+  提示: 'SwiftUI应用的用户界面是一组视图的组合，这些视图构成了视图的层次机构。每个视图都依赖于某些数据。当数据发生变化时，无论是由于外部事件还是由于用户在使用应用程序所进行的操作，SwiftUI都会自动更新视图以反映这些变化。'
   翻译: ''
 - 内容: Step 5
   提示: ''
-  翻译: ''
+  翻译: '第五步'
 - 内容: The Binding property wrapper provides a two-way, read-write binding to data
     that the view needs. However, RecipeEditor doesn’t own the data. Instead, another
     view creates and owns the instance of RecipeEditorConfig that RecipeEditor binds
@@ -102,7 +102,7 @@
 - 内容: Indicate data dependencies in a view using state, and share those dependencies
     with other views using bindings.
   提示: ''
-  翻译: ''
+  翻译: '通过State在视图中来指示数据依赖关系，并通过Binding将这些依赖关系与其他视图共享。'
 - 内容: The app calls this method when a person taps the Add Recipe button.
   提示: ''
   翻译: ''
@@ -249,7 +249,7 @@
   翻译: ''
 - 内容: Driving changes in your UI with state and bindings
   提示: ''
-  翻译: ''
+  翻译: '通过State和Binding来改变你的UI'
 - 内容: RecipeEditor passes the binding variable config to RecipeEditorForm. It passes
     the variable as a binding, indicated by prefixing the variable name config with
     the $ symbol. Because RecipeEditorForm receives config as a binding, the form
@@ -273,7 +273,7 @@
 - 内容: This sample shows examples of using State variables to indicate data dependencies,
     and sharing data with other views using the Binding property wrapper.
   提示: ''
-  翻译: ''
+  翻译: '这个案例展示了一个使用State变量来指示数据的依赖性，以及使用Binding属性包装器与其他视图共享数据的例子。'
 - 内容: Instead of creating an empty recipe like presentAddRecipe(sidebarItem:) does,
     presentEditRecipe(_:) receives the recipe to edit as a parameter and sets recipe
     to the incoming recipe.
