--- a/project/swiftui-concepts/driving-changes-in-your-ui-with-state-and-bindings.yml
+++ b/project/swiftui-concepts/driving-changes-in-your-ui-with-state-and-bindings.yml
@@ -64,7 +64,7 @@
     and imperative code outside of the view. It also helps make unit testing state
     changes easier to implement.
   提示: ''
-  翻译: ''
+  翻译: '当一个视图需要管理不止一块状态数据时，在一个视图专用的结构中管理这些数据会很有帮助。通过将属性和命令代码移到视图之外，有助于使视图的声明式界面代码更易阅读。此外，还更容易实现关于状态改变的单元测试代码。'
 - 内容: The done() method indicates that the editor should save changes made to the
     recipe, and dismiss the RecipeEditor view.
   提示: ''
@@ -79,7 +79,7 @@
   翻译: ''
 - 内容: Step 6
   提示: ''
-  翻译: ''
+  翻译: '第六步'
 - 内容: The sheet contains RecipeEditor, a custom view that displays a form containing
     input fields that let a person change the data of a recipe.
   提示: ''
@@ -102,10 +102,10 @@
 - 内容: Indicate data dependencies in a view using state, and share those dependencies
     with other views using bindings.
   提示: ''
-  翻译: '通过State在视图中来指示数据依赖关系，并通过Binding将这些依赖关系与其他视图共享。'
+  翻译: '通过状态在视图中来指示数据依赖关系，并通过绑定将这些依赖关系与其他视图共享。'
 - 内容: The app calls this method when a person taps the Add Recipe button.
   提示: ''
-  翻译: ''
+  翻译: '当用户点击“Add Recipe”按钮时，应用会调用这个方法。'
 - 内容: Recall that presentAddRecipe(sidebarItem:) creates an empty recipe and sets
     its isFavorite and collections property values based on the selected sidebar item.
     The method also sets shouldSaveChanges to false and isPresented to true. Keeping
@@ -119,17 +119,17 @@
   翻译: ''
 - 内容: Step 8
   提示: ''
-  翻译: ''
+  翻译: '第八步'
 - 内容: Step 3
   提示: ''
-  翻译: ''
+  翻译: '第三步'
 - 内容: RecipeEditor contains RecipeEditorForm, which displays the input fields needed
     to edit recipe data.
   提示: ''
   翻译: ''
 - 内容: Step 4
   提示: ''
-  翻译: ''
+  翻译: '第四步'
 - 内容: RecipeEditorConfig concerns itself with RecipeEditor and only that view, which
     is why ContentListView implements the didDismissEditor method instead of RecipeEditorConfig.
     This approach keeps the areas of concern separate.
@@ -172,7 +172,7 @@
   翻译: ''
 - 内容: Step 9
   提示: ''
-  翻译: ''
+  翻译: '第九步'
 - 内容: The RecipeEditor view has a binding to an instance of RecipeEditorConfig. The
     editor can read and write the data but it doesn’t own the recipe data. Instead,
     the view ContentListView creates and owns the data, and SwiftUI manages that data
@@ -197,22 +197,22 @@
     but for editing an existing recipe.
   提示: ''
   翻译: ''
-- 内容: 'This sample app displays a collection of cooking recipes. A person using the
+- 内容: This sample app displays a collection of cooking recipes. A person using the
     app can view the details of a recipe and add new ones. To add a recipe, the sample
     presents the custom view RecipeEditor, which needs three pieces of state data:
     a recipe, a flag indicating whether to save the changes, and a flag indicating
-    whether to present the RecipeEditor view.'
+    whether to present the RecipeEditor view.
   提示: ''
-  翻译: ''
+  翻译: '这个案例应用展示了一个食谱的集合。使用这个应用的人可以查看食谱的详细说明并添加新的食谱。为了能使用户添加一个食谱，该案例显示了一个自定义视图RecipeEditor，它需要三块状态数据：一个是食谱，一个用来表示是否保存更改的标志，以及一个表示是否展示RecipeEditor视图的标志。'
 - 内容: The view defines the private state variable recipeEditorConfig, of type RecipeEditorConfig.
   提示: ''
   翻译: ''
 - 内容: Step 1
   提示: ''
-  翻译: ''
+  翻译: '第一步'
 - 内容: Step 10
   提示: ''
-  翻译: ''
+  翻译: '第十步'
 - 内容: Create a state variable in another view
   提示: ''
   翻译: ''
@@ -249,16 +249,16 @@
   翻译: ''
 - 内容: Driving changes in your UI with state and bindings
   提示: ''
-  翻译: '通过State和Binding来改变你的UI'
+  翻译: '通过状态和绑定来改变你的UI'
 - 内容: RecipeEditor passes the binding variable config to RecipeEditorForm. It passes
     the variable as a binding, indicated by prefixing the variable name config with
     the $ symbol. Because RecipeEditorForm receives config as a binding, the form
     can read and write data to config.
   提示: ''
   翻译: ''
-- 内容: 'The RecipeEditorConfig supports two other mutating methods that trigger state
+- 内容: The RecipeEditorConfig supports two other mutating methods that trigger state
     changes in the editor while also separating imperative code from declarative interface
-    code: done() and cancel().'
+    code: done() and cancel().
   提示: ''
   翻译: ''
 - 内容: The editor also displays a Save button that, when a person taps it, calls the
@@ -269,7 +269,7 @@
   翻译: ''
 - 内容: Step 2
   提示: ''
-  翻译: ''
+  翻译: '第二步'
 - 内容: This sample shows examples of using State variables to indicate data dependencies,
     and sharing data with other views using the Binding property wrapper.
   提示: ''
@@ -297,13 +297,13 @@
 - 内容: The sample app separates its state data and imperative code from RecipeEditor
     by defining a structure, RecipeEditorConfig.
   提示: ''
-  翻译: ''
+  翻译: '该案例应用通过定义一个结构，RecipeEditorConfig，将状态数据和命令代码与RecipeEditor分开。'
 - 内容: Separate properties and imperative code from the view
   提示: ''
-  翻译: ''
+  翻译: '从视图中分离属性和命令代码'
 - 内容: Step 7
   提示: ''
-  翻译: ''
+  翻译: '第七步'
 - 内容: With a structure in place that contains the data that the recipe editor needs,
     and methods that change the state of the editor, look at the RecipeEditor view
     to see how it uses RecipeEditorConfig.
