--- a/project/swiftui-concepts/scaling-views-to-complement-text.yml
+++ b/project/swiftui-concepts/scaling-views-to-complement-text.yml
@@ -1,30 +1,141 @@
-- 内容: Layering content
+- 内容: View layout
   提示: ''
-  翻译: ''
-- 内容: Try some other Font.TextStyle values, like Font.TextStyle.largeTitle or Font.TextStyle.caption
-    to see how the sizes of the word and the leaf symbol change.
+  翻译: '视图布局'
+- 内容: Scaling views to complement text
   提示: ''
-  翻译: ''
+  翻译: '将视图进行缩放以补足文本'
+- 内容: Construct a layout that adapts to font styles, Dynamic Type, and varying string
+    lengths.
+  提示: ''
+  翻译: '为了适配字体样式、动态类型和不同长度的字符串而构建一个布局'
+- 内容: When composing a view that includes text, it’s important to define other elements
+    relative to that text, like a symbol or padding, so the view adapts to the text’s
+    size.
+  提示: ''
+  翻译: '当构建一个包含文本的视图时，相对文本本身来说，更重要的是定义其它像是符号或边距这样的元素，以便视图能够适配文本的大小。'
+- 内容: The symbol and padding can adapt as the text content changes for localizations,
+    Dynamic Type sizes, or to display a different phrase.
+  提示: ''
+  翻译: '当文本内容因为本地化、动态类型大小或显示了一段不同短语而发生变化时，符号和边距可以进行适应调整。'
+- 内容: Section 1
+  提示: ''
+  翻译: '第一节'
+- 内容: Associate content with the text
+  提示: ''
+  翻译: '将内容与文本关联起来'
+- 内容: This example coordinates a name and a symbol to represent a single item with
+    a Label. It also defines a Capsule in a background(alignment:content:) modifier,
+    to maintain a consistent margin around the Label.
+  提示: ''
+  翻译: '以下示例将一个标题和符号合并起来用一个 Label 表示成单个对象。它还在调用 background(alignment:content:) 修饰符的地方传入了一个 Capsule 形状，，以使标签周围的边距保持一致。'
+- 内容: Step 1
+  提示: ''
+  翻译: '第一步'
+- 内容: To make KeywordBubble reusable, the label’s text and symbol name are properties
+    of the view. When another view uses a KeywordBubble, that other view specifies
+    the text and symbol to display.
+  提示: ''
+  翻译: '为使 KeywordBubble 可重用，把标签的文本和符号名称都声明成该视图的属性。当另一个视图要使用 KeywordBubble 时，该视图可以指定要显示的文本和符号。'
+- 内容: Step 2
+  提示: ''
+  翻译: '第二步'
+- 内容: Label is a built-in view that arranges the text and the symbol, the main content
+    of this view. Label adjusts the symbol’s size and aligns the two pieces of content,
+    so you don’t have to manually align the Text with an Image.
+  提示: ''
+  翻译: 'Label 是一个用于排列文本和符号的内置视图，这两个是其主要内容。Label 会自动调整符号的大小并对齐这两块内容，因此你无需手动将 Text 与一个 Image 对齐。'
 - 内容: The name parameter retrieves a system image to display. To look up the names
     of available system images, download the SF Symbols app.
   提示: ''
-  翻译: ''
-- 内容: Scaling views to complement text
+  翻译: 'symbol 参数用来获取一个要显示的系统图片。要查找可用的系统图片名称，你可以下载 SF Symbols 这个 app。'
+- 内容: Step 3
   提示: ''
-  翻译: ''
-- 内容: To keep the content inside the bubble at large text sizes without adding too
-    much padding for small text sizes, define a custom padding metric that scales
-    with the text size.
+  翻译: '第三步'
+- 内容: A Label applies the same font to both the text and image. An image that displays
+    an SF Symbol uses font information to determine its size and position.
   提示: ''
-  翻译: ''
-- 内容: The padding(_:) modifier adds a specific amount of space, in points, around
-    the label on all four edges. Because paddingWidth is a ScaledMetric, padding(_:)
-    adds more space when the Label uses a larger text size.
+  翻译: 'Label 会对文本和图片应用相同的字体。一个显示 SF Symbol 符号的图片使用字体信息来确定其大小和位置。'
+- 内容: Experiment
   提示: ''
-  翻译: ''
+  翻译: '实践'
+- 内容: Try some other Font.TextStyle values, like Font.TextStyle.largeTitle or Font.TextStyle.caption
+    to see how the sizes of the word and the leaf symbol change.
+  提示: ''
+  翻译: '让我们尝试一些其他的 Font.TextStyle 值，如 Font.TextStyle.largeTitle 或 Font.TextStyle.caption，来看看标题和叶子符号的大小如何变化。'
+- 内容: Step 4
+  提示: ''
+  翻译: '第四步'
+- 内容: Using the padding(_:_:) modifier without any arguments creates a view that adds
+    a default amount of space on all four edges of the view that it modifies.
+  提示: ''
+  翻译: '在不提供参数的情况下，使用 padding(_:_:) 修饰符会给所创建视图的四个边缘上添加默认的间距空间。'
+- 内容: Step 5
+  提示: ''
+  翻译: '第五步'
+- 内容: The Capsule shape provides a rounded rectangle that expands to fill its container.
+    The fill(_:style:) modifier specifies the color of the capsule, and opacity(_:)
+    gives the capsule a bit of transparency.
+  提示: ''
+  翻译: 'Capsule 形状提供了一个圆角矩形，它会扩展并填充其容器。fill(_:style:) 修饰符用于指定其填充色，而 opacity(_:) 则给它添加了一点透明度。'
 - 内容: Step 6
   提示: ''
-  翻译: ''
+  翻译: '第六步'
+- 内容: To specify that the capsule belongs behind the text and symbol, the code defines
+    the capsule inside a background(alignment:content:) modifier.
+  提示: ''
+  翻译: '为了把这个形状放到文本和符号的下面，把定义它的代码放到 background(alignment:content:) 修饰符的 content 参数中。'
+- 内容: The capsule’s size includes the padding around the Label because the background
+    modifier is after the padding modifier.
+  提示: ''
+  翻译: '由于 background 修饰符位于 padding 修饰符之后，所以胶囊的大小包含了标签四周的填充空间。'
+- 内容: Section 2
+  提示: ''
+  翻译: '第二节'
+- 内容: Preview a custom view in Xcode
+  提示: ''
+  翻译: '在 Xcode 中预览自定义视图'
+- 内容: Xcode provides a Canvas where you can preview layouts as your code changes.
+    To see a preview of a custom SwiftUI view, implement the PreviewProvider protocol.
+    The Canvas can display several variants of your view so you can see how it adapts
+    to different environments.
+  提示: ''
+  翻译: 'Xcode 提供了一个名为 Canvas 的窗口，它可以让你在代码更改时预览布局。要预览一个自定义 SwiftUI 视图的话，需为这个视图实现 PreviewProvider 协议。
+        Canvas 可以显示你这个视图的多个变体，以便可以看到它如何适应不同的环境。'
+- 内容: You can see a live preview of a SwiftUI View in Xcode side by side with the
+    code that defines it.
+  提示: ''
+  翻译: '在 Xcode 中，你可以在定义一个 SwiftUI 视图的代码旁边，实时预览这个视图。'
+- 内容: To preview a custom view, implement the PreviewProvider protocol by defining
+    a static previews property.
+  提示: ''
+  翻译: '要预览自定义视图，需实现 PreviewProvider 协议，并定义一个名为 previews 的静态属性。'
+- 内容: To verify whether your view works with a range of inputs, configure more than
+    one preview, and define static data to display in each preview.
+  提示: ''
+  翻译: '为了验证你的视图是否适用于各种输入，可以配置多个视图以供预览，并为每个视图定义要显示的静态数据。'
+- 内容: The keywords array defines two String values of different lengths. The previews
+    property defines both of these in a VStack to display how the KeywordBubble view
+    adapts to the text length.
+  提示: ''
+  翻译: 'keywords 数组包含了两个不同长度的字符串。previews 属性则用这两个字符串生成了两个 KeywordBubble 视图，并把它们放到了一个 VStack 中，以展示 KeywordBubble 视图如何适应不同长度的文本。'
+- 内容: This line defines the KeywordBubble view, and provides the text and image for it.
+  提示: ''
+  翻译: '这行代码定义了 KeywordBubble 视图，并为其提供了文本和图片。'
+- 内容: Try replacing leaf with the name of another SF Symbol. For more information
+    about customizing the appearance of SF Symbols, see SF Symbols in the Human Interface
+    Guidelines.
+  提示: ''
+  翻译: '请尝试用另外一个 SF Symbol 符号的名字替换当前的 leaf。要了解更多关于自定义 SF Symbols 外观的信息，请参考人机界面指南中的 SF Symbols 部分。'
+- 内容: To verify how your view looks with the full range of Dynamic Type text sizes,
+    choose Variants > Dynamic Type Variants in the Xcode Canvas view.
+  提示: ''
+  翻译: '要验证你的视图在所有动态类型文本大小下的外观，请在 Xcode 的 Canvas 窗口中选择 "Variants > Dynamic Type Variants"。'
+- 内容: Section 3
+  提示: ''
+  翻译: '第三节'
+- 内容: Adjust dimensions with ScaledMetric
+  提示: ''
+  翻译: '使用 ScaledMetric 调整尺寸'
 - 内容: The default values for dimensions such as the padding on this view, or the width
     and height of a frame aren’t always going to work for your layout. In many cases,
     you can design a small set of values to use across a range of environments. But
@@ -33,145 +144,40 @@
     need to provide a numeric value that adapts to the environment’s effective font
     size, use the ScaledMetric property wrapper.
   提示: ''
-  翻译: ''
-- 内容: Xcode provides a Canvas where you can preview layouts as your code changes.
-    To see a preview of a custom SwiftUI view, implement the PreviewProvider protocol.
-    The Canvas can display several variants of your view so you can see how it adapts
-    to different environments.
-  提示: ''
-  翻译: ''
-- 内容: A Label applies the same font to both the text and image. An image that displays
-    an SF Symbol uses font information to determine its size and position.
-  提示: ''
-  翻译: ''
-- 内容: Experiment
-  提示: ''
-  翻译: ''
-- 内容: Construct a layout that adapts to font styles, Dynamic Type, and varying string
-    lengths.
-  提示: ''
-  翻译: ''
-- 内容: The keywords array defines two String values of different lengths. The previews
-    property defines both of these in a VStack to display how the KeywordBubble view
-    adapts to the text length.
-  提示: ''
-  翻译: ''
-- 内容: When composing a view that includes text, it’s important to define other elements
-    relative to that text, like a symbol or padding, so the view adapts to the text’s
-    size.
-  提示: ''
-  翻译: ''
+  翻译: '对于像是视图上的填充、宽度和高度等这样维度的默认值，并不总是适用于你的布局。许多情况下，你可以设计一小组值，让其在各种环境中使用。
+        但是，动态类型的设置值和 Font.TextStyle 的选项之间有超过一百种组合，因此为每个组合选择特定的值并不实际。当你需要提供一个能根据环境的实际字体大小自适应的数值时，可以使用 ScaledMetric 属性包装器。'
 - 内容: Look at the KeywordBubbleDefaultPadding preview for the AX 5 text size. With
     the default padding, the tip of the leaf symbol collides with the edge of the
     Capsule shape.
   提示: ''
-  翻译: ''
-- 内容: To verify whether your view works with a range of inputs, configure more than
-    one preview, and define static data to display in each preview.
+  翻译: '查看 KeywordBubbleDefaultPadding 在 AX 5 文本大小下的预览。因为使用默认值来填充四周，所以叶子符号的尖尖头已经与 Capsule 形状的边缘产生碰撞。'
+- 内容: To keep the content inside the bubble at large text sizes without adding too
+    much padding for small text sizes, define a custom padding metric that scales
+    with the text size.
   提示: ''
-  翻译: ''
-- 内容: Associate content with the text
-  提示: ''
-  翻译: ''
-- 内容: Using the padding(_:_:) modifier without any arguments creates a view that adds
-    a default amount of space on all four edges of the view that it modifies.
-  提示: ''
-  翻译: ''
-- 内容: This example coordinates a name and a symbol to represent a single item with
-    a Label. It also defines a Capsule in a background(alignment:content:) modifier,
-    to maintain a consistent margin around the Label.
-  提示: ''
-  翻译: ''
-- 内容: Step 3
-  提示: ''
-  翻译: ''
-- 内容: This line defines the KeywordBubble view, and provides the text and image for
-    it.
-  提示: ''
-  翻译: ''
-- 内容: Step 4
-  提示: ''
-  翻译: ''
-- 内容: Preview a custom view in Xcode
-  提示: ''
-  翻译: ''
-- 内容: To make KeywordBubble reusable, the label’s text and symbol name are properties
-    of the view. When another view uses a KeywordBubble, that other view specifies
-    the text and symbol to display.
-  提示: ''
-  翻译: ''
-- 内容: The Capsule shape provides a rounded rectangle that expands to fill its container.
-    The fill(_:style:) modifier specifies the color of the capsule, and opacity(_:)
-    gives the capsule a bit of transparency.
-  提示: ''
-  翻译: ''
+  翻译: '为了让内容在大文字尺寸下保持在形状内部，而在小文字尺寸下又不必增加过多的填充值，可以定义一个随文字尺寸缩放的自定义填充值。'
 - 内容: This paddingWidth variable provides a value of 14.5 for content in a DynamicTypeSize.large
     Dynamic Type environment. With the ScaledMetric property wrapper, the value is
     proportionally larger or smaller, according to the current value of dynamicTypeSize.
   提示: ''
-  翻译: ''
-- 内容: Specifying Font.TextStyle.title for the textStyle parameter indicates that this
-    metric scales with, or is relative to, the title style.
-  提示: ''
-  翻译: ''
-- 内容: Define views in an overlay or background to adapt their layout to the primary
-    content.
-  提示: ''
-  翻译: ''
-- 内容: The capsule’s size includes the padding around the Label because the background
-    modifier is after the padding modifier.
-  提示: ''
-  翻译: ''
-- 内容: Step 1
-  提示: ''
-  翻译: ''
-- 内容: Adjust dimensions with ScaledMetric
-  提示: ''
-  翻译: ''
-- 内容: The symbol and padding can adapt as the text content changes for localizations,
-    Dynamic Type sizes, or to display a different phrase.
-  提示: ''
-  翻译: ''
-- 内容: Try replacing leaf with the name of another SF Symbol. For more information
-    about customizing the appearance of SF Symbols, see SF Symbols in the Human Interface
-    Guidelines.
-  提示: ''
-  翻译: ''
-- 内容: You can see a live preview of a SwiftUI View in Xcode side by side with the
-    code that defines it.
-  提示: ''
-  翻译: ''
+  翻译: '为内容在 DynamicTypeSize.large 动态类型环境下，定义一个名为 paddingWidth 的变量并把其值设置成 14.5。使用 ScaledMetric 属性包装器，该值将根据 dynamicTypeSize 的当前值按比例变大或变小。'
 - 内容: For more information about using ScaledMetric to scale dimensions in proportion
     to text, see Applying custom fonts to text.
   提示: ''
-  翻译: ''
-- 内容: Step 2
-  提示: ''
-  翻译: ''
-- 内容: To preview a custom view, implement the PreviewProvider protocol by defining
-    a static previews property.
-  提示: ''
-  翻译: ''
-- 内容: To specify that the capsule belongs behind the text and symbol, the code defines
-    the capsule inside a background(alignment:content:) modifier.
-  提示: ''
-  翻译: ''
+  翻译: '有关使用 ScaledMetric 按比例缩放尺寸以适应文本的更多信息，请参阅 "Applying custom fonts to text"。'
 - 内容: The Label uses the Font.TextStyle.title style to define the text size.
   提示: ''
-  翻译: ''
+  翻译: '使用 Font.TextStyle.title 样式来定义文本的大小'
+- 内容: Specifying Font.TextStyle.title for the textStyle parameter indicates that this
+    metric scales with, or is relative to, the title style.
+  提示: ''
+  翻译: '设置 Font.TextStyle.title 作为 textStyle 参数的值，表示此度量按照 title 样式进行缩放，或者说以 title 样式为基础进行计算。'
+- 内容: The padding(_:) modifier adds a specific amount of space, in points, around
+    the label on all four edges. Because paddingWidth is a ScaledMetric, padding(_:)
+    adds more space when the Label uses a larger text size.
+  提示: ''
+  翻译: 'padding(_:) 修饰符用指定值（以点为单位）设置标签四周的填充空间。由于 paddingWidth 是一个 ScaledMetric，当标签使用更大的文本大小时，padding(_:) 会被设置更大的填充值。'
 - 内容: With the ScaledMetric variable padding, all the Dynamic Type variants now have
     padding between the leaf symbol and the edge of the Capsule shape in the background.
   提示: ''
-  翻译: ''
-- 内容: To verify how your view looks with the full range of Dynamic Type text sizes,
-    choose Variants > Dynamic Type Variants in the Xcode Canvas view.
-  提示: ''
-  翻译: ''
-- 内容: Label is a built-in view that arranges the text and the symbol, the main content
-    of this view. Label adjusts the symbol’s size and aligns the two pieces of content,
-    so you don’t have to manually align the Text with an Image.
-  提示: ''
-  翻译: ''
-- 内容: Step 5
-  提示: ''
-  翻译: ''
+  翻译: '因为使用了 ScaledMetric 变量来设置边距，所以现在在所有的动态类型变体中，叶子符号和形状的边缘之间总会有填充空间。'
