--- a/project/swiftui-concepts/adjusting-the-space-between-views.yml
+++ b/project/swiftui-concepts/adjusting-the-space-between-views.yml
@@ -8,7 +8,7 @@
   翻译: ''
 - 内容: Specify the alignment and spacing of your content.
   提示: ''
-  翻译: ''
+  翻译: '指定你的内容的对齐和间距。'
 - 内容: The effect of the padding modifier depends on which view it modifies.
   提示: ''
   翻译: ''
