--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -5,7 +5,8 @@ name: Reorder-on-Merge
 # Controls when the workflow will run
 on:
   pull_request:
-    branches: [ "main" ]
+    types:
+      - closed
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
