--- a/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
+++ b/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
@@ -1,27 +1,27 @@
 - 内容: 'Creating a custom input control that binds to a value'
   提示: ''
-  翻译: ''
+  翻译: '创建一个与特定值绑定的输入控件'
 - 内容: 'Provide interactions that are unique to your app with custom controls that bind to a value.'
   提示: ''
-  翻译: ''
+  翻译: '通过使用与特定值绑定的自定义控件为你的应用提供独一无二的交互体验。'
 - 内容: 'SwiftUI provides input controls like Slider, TextField, and many others that bind to a value and can change the value as a person’s interacts with the control. But every app is different. You may find that you need a custom control that provides behavior unique to your app.'
   提示: ''
-  翻译: ''
+  翻译: 'SwiftUI提供了一些与特定值绑定的输入控制组件，例如滑动条，文本输入框等。这些组件的值会随着用户与其交互而改变。但是每个应用都是独一无二的。你可能会发现，你需要一个自定义控件来提供你的应用所特有的交互行为。'
 - 内容: 'SwiftUI provides the building blocks you need to create a custom input control for your app. This tutorial walks through an example of one such control, a rating control. The sample app uses this control to let people rate recipes from 1 to 5 stars.'
   提示: ''
-  翻译: ''
+  翻译: 'SwiftUI提供了你为你的应用创建自定义输入控件所需要的构建组件。本教程讲介绍这样控件的一个例子，也就是一个评级控件。该案例应用通过这个控件让用户给菜谱从 1 到 5 星评分'
 - 内容: 'To experiment with the code, download the project files and open the sample in Xcode.'
   提示: ''
-  翻译: ''
+  翻译: '如果要亲自尝试代码，请下载项目文件，并在Xcode中打开案例。'
 - 内容: 'Design a custom control'
   提示: ''
-  翻译: ''
+  翻译: '设计一个自定义控件'
 - 内容: 'Before implementing a custom control, ask yourself what data does the control need, what does it do with that data, and how it does it represent that data visually within the app. The sample app, for instance, needs an Int property that represents the rating of a recipe. The control needs to be able to change the value of this property. And because the control shows the rating of a recipe, it needs to display a set of stars that reflects the rating value; for instance, the control displays five stars when the rating value is 5.'
   提示: ''
   翻译: ''
 - 内容: 'Step 1'
   提示: ''
-  翻译: ''
+  翻译: '第一步'
 - 内容: 'The sample defines the custom control as a structure named StarRating.'
   提示: ''
   翻译: ''
@@ -30,7 +30,7 @@
   翻译: ''
 - 内容: 'Step 2'
   提示: ''
-  翻译: ''
+  翻译: '第二步'
 - 内容: 'The structure defines a Binding variable named rating, which stores the rating of a recipe.'
   提示: ''
   翻译: ''
@@ -39,25 +39,25 @@
   翻译: ''
 - 内容: 'Step 3'
   提示: ''
-  翻译: ''
+  翻译: '第三步'
 - 内容: 'The private constant maxRating stores the highest rating possible that a person can give a recipe.'
   提示: ''
   翻译: ''
 - 内容: 'Step 4'
   提示: ''
-  翻译: ''
+  翻译: '第四步'
 - 内容: 'Note'
   提示: ''
   翻译: ''
 - 内容: 'Step 5'
   提示: ''
-  翻译: ''
+  翻译: '第五步'
 - 内容: 'The HStack displays the rating stars in a horizontal line.'
   提示: ''
   翻译: ''
 - 内容: 'Step 6'
   提示: ''
-  翻译: ''
+  翻译: '第六步'
 - 内容: 'Inside the HStack, the control uses a ForEach structure to display the number of stars indicated by the maxRating constant.'
   提示: ''
   翻译: ''
@@ -66,13 +66,13 @@
   翻译: ''
 - 内容: 'Important'
   提示: ''
-  翻译: ''
+  翻译: '重要提示'
 - 内容: 'The id parameter is of type ID, which is Hashable. The ForEach structure uses this parameter to identify the data, that is, the integer values 1 through 5. The parameter value is the identity key path \.self, which specifies an Int instance for each integer. Because Int is hashable, using this key path satisfies the requirements of the ForEach initializer method init(_:id:content:). And because the data is an increasing range of integers that will never have duplicate values, it’s okay to use each integer value as its identifier.'
   提示: ''
   翻译: ''
 - 内容: 'Step 7'
   提示: ''
-  翻译: ''
+  翻译: '第七步'
 - 内容: 'The control displays a star using an instance of Image.'
   提示: ''
   翻译: ''
@@ -81,13 +81,13 @@
   翻译: ''
 - 内容: 'Experiment'
   提示: ''
-  翻译: ''
+  翻译: '实践'
 - 内容: 'Change the symbol from a star to another symbol such as circle.'
   提示: ''
   翻译: ''
 - 内容: 'Step 8'
   提示: ''
-  翻译: ''
+  翻译: '第八步'
 - 内容: 'The control displays a filled star when the integer value is less than or equal to the rating value and an empty star when the integer value is greater than rating, so the control applies the symbolVariant(_:) modifier to the Image instance.'
   提示: ''
   翻译: ''
@@ -96,7 +96,7 @@
   翻译: ''
 - 内容: 'Step 9'
   提示: ''
-  翻译: ''
+  翻译: '第九步'
 - 内容: 'The control set the color of the stars using the foregroundColor(_:) view modifier.'
   提示: ''
   翻译: ''
